fix: slider wrapper on tablet and mobile" " "

--- a/src/pages/timeline/components/pagination/pagination.module.scss
+++ b/src/pages/timeline/components/pagination/pagination.module.scss
@@ -7,5 +7,6 @@
 
   @media screen and (max-width: $tablet-album-orientation) {
     display: flex;
+    margin-top: 8px;
   }
 }
